--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -116,11 +116,12 @@ let rd_ifElse = (iff, thenf, elsef) => (vm0, vm1, dom, domc) => {
 	else {
 		let f0 = vm0 != null && (iff(vm0) ? thenf : elsef);
 		let f1 = vm1 != null && (iff(vm1) ? thenf : elsef);
-		if (f0 != f1) {
+		if (f0 == f1)
+			f0(vm0, vm1, dom, domc);
+		else {
 			f0 != null && f0(vm0, null, dom, domc);
 			f1 != null && f1(null, vm1, dom, domc);
-		} else if (f0 != null)
-			f0(vm0, vm1, dom, domc);
+		}
 	}
 };
 
